[project]
name = "lang-chain-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.0.9",
    "langchain[openai]>=0.3.24",
    "langgraph>=0.4.0",
    "mcp>=1.6.0",
    "pypdf>=5.4.0",
]
